[package]
name = "angrysniffer"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["tokio", "debug"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
nix = { version = "0.28", features = ["process", "user"] }
toml = { version="*" }
